--- a/app/src/main/res/drawable/borderlinear.xml
+++ b/app/src/main/res/drawable/borderlinear.xml
@@ -5,13 +5,13 @@
 
     <!-- Set màu nền-->
     <solid
-        android:color="#FF9900">
+        android:color="@color/white">
     </solid>
 
     <!-- đặt thuộc tính màu và độ rộng của đường viền -->
     <stroke
-        android:width="1dp"
-        android:color="#E3A3A3">
+        android:width="3dp"
+        android:color="#100E0E">
     </stroke>
 
     <!-- các thuộc tính căn chỉnh-->
