--- a/app/src/main/res/drawable/botronbtnfail.xml
+++ b/app/src/main/res/drawable/botronbtnfail.xml
@@ -5,7 +5,7 @@
 
     <!-- Set màu nền-->
     <solid
-        android:color="#FF9900">
+        android:color="#CCCCCC">
     </solid>
 
     <!-- đặt thuộc tính màu và độ rộng của đường viền -->
