--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,9 +21,10 @@
         android:layout_marginTop="50dp"
         android:orientation="vertical">
         <EditText
+            android:id="@+id/tendangnhap"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="   Tên đăng nhập"
+            android:hint="   Tên đăng nhập"
             android:textColor="@color/teal_200"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
@@ -31,9 +32,10 @@
             android:background="@drawable/botron"
             />
         <EditText
+            android:id="@+id/matkhau"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="   Mật khẩu"
+            android:hint="   Mật khẩu"
             android:textColor="@color/teal_200"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
@@ -41,10 +43,10 @@
             android:background="@drawable/botron"
             />
         <Button
+            android:id="@+id/btnLogin"
             android:layout_marginRight="80dp"
             android:layout_marginLeft="80dp"
             android:layout_marginTop="60dp"
-            android:lay="center"
             android:background="@drawable/botronbtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
