--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="madh">#ED2A1C</color>
+    <color name="tuchoidon">#BA8C89</color>
+    <color name="colorbtn">#FF9900</color>
 </resources>
