--- a/app/src/main/res/layout/activity_thongtincanhan.xml
+++ b/app/src/main/res/layout/activity_thongtincanhan.xml
@@ -6,94 +6,104 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".Thongtincanhan">
-
-    <ImageView
-        android:id="@+id/imgprf"
-        android:layout_width="wrap_content"
-        android:layout_height="188dp"
-        android:layout_gravity="center"
-        android:src="@drawable/anhuser"
-        android:layout_marginTop="20dp"
-        />
-    <EditText
-        android:id="@+id/hovaten"
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="@string/hoten"
-        android:background="@drawable/botron"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        />
-    <EditText
-        android:id="@+id/sodienthoai"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="@string/sdt"
-        android:background="@drawable/botron"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        />
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="@string/email"
-        android:background="@drawable/botron"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        />
-    <EditText
-        android:id="@+id/ngaysinh"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="@string/ngaysinh"
-        android:background="@drawable/botron"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        />
-    <EditText
-        android:id="@+id/cmnd"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="@string/cmnd"
-        android:background="@drawable/botron"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        />
-    <EditText
-        android:id="@+id/diachi"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="@string/diachi"
-        android:background="@drawable/botron"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        />
-    <EditText
-        android:id="@+id/bienso"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="@string/bienso"
-        android:background="@drawable/botron"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        />
-
-    <Button
-        android:id="@+id/btnsave"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save"
-        android:background="@drawable/botronbtn"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
+        android:orientation="vertical">
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="bottom|center_horizontal"
+            android:src="@drawable/anhuser" />
 
-        />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/iv_camera"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="bottom|center"
+            android:src="@drawable/ic_baseline_add_a_photo_24"
+            android:layout_marginLeft="55dp"
+            android:layout_marginTop="-39dp"
+            />
+        <EditText
+            android:id="@+id/hovaten"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="@string/hoten"
+            android:background="@drawable/botron"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            />
+        <EditText
+            android:id="@+id/sodienthoai"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="@string/sdt"
+            android:inputType="number"
+            android:background="@drawable/botron"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            />
+        <EditText
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="@string/email"
+            android:background="@drawable/botron"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            />
+        <EditText
+            android:id="@+id/ngaysinh"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="@string/ngaysinh"
+            android:background="@drawable/botron"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            />
+
+        <EditText
+            android:id="@+id/diachi"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="@string/diachi"
+            android:background="@drawable/botron"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            />
+        <EditText
+            android:id="@+id/bienso"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="@string/bienso"
+            android:background="@drawable/botron"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            />
+
+        <Button
+            android:id="@+id/btnsave"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Save"
+            android:background="@drawable/botronbtn"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+
+            />
+    </LinearLayout>
+
+
+</ScrollView>
 </LinearLayout>
