--- a/app/src/main/res/drawable/botron.xml
+++ b/app/src/main/res/drawable/botron.xml
@@ -11,7 +11,7 @@
     <!-- đặt thuộc tính màu và độ rộng của đường viền -->
     <stroke
         android:width="1dp"
-        android:color="#E3A3A3">
+        android:color="#151414">
     </stroke>
 
     <!-- các thuộc tính căn chỉnh-->
