--- a/app/src/main/res/layout/activity_doi_mat_khau.xml
+++ b/app/src/main/res/layout/activity_doi_mat_khau.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <ImageView
-
+            android:id="@+id/imgBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_arrow_back_ios_24"
@@ -28,72 +28,83 @@
             android:textColor="@color/black"
             android:layout_marginLeft="100dp"/>
     </LinearLayout>
-    <ImageView
-        android:layout_width="429dp"
-        android:layout_height="283dp"
-        android:src="@drawable/logo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="16dp" />
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:orientation="vertical">
-        <EditText
-            android:id="@+id/edttenDangNhap"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:hint="   Tên đăng nhập"
-            android:textColor="@color/teal_200"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:background="@drawable/botron"
-            />
-        <EditText
-            android:id="@+id/edtDoiMatKhau"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:hint="   Mật khẩu cũ"
-            android:textColor="@color/teal_200"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/botron"
-            />
-        <EditText
-            android:id="@+id/matKhauMoi"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:hint="   Mật khẩu mới"
-            android:textColor="@color/teal_200"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/botron"
-            />
-        <EditText
-            android:id="@+id/nhapLai"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:hint="   Nhập lại mật khẩu mới"
-            android:textColor="@color/teal_200"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/botron"
-            />
-        <Button
-            android:id="@+id/btnDoimk"
-            android:layout_marginRight="80dp"
-            android:layout_marginLeft="80dp"
-            android:layout_marginTop="60dp"
-            android:background="@drawable/botronbtn"
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:text="Đổi mật khẩu"
-            />
-    </LinearLayout>
+            android:orientation="vertical"
+            >
+            <ImageView
+                android:layout_width="429dp"
+                android:layout_height="283dp"
+                android:src="@drawable/logo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:layout_editor_absoluteY="16dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:orientation="vertical">
+                <EditText
+
+                    android:id="@+id/edttenDangNhap"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:hint="   Tên đăng nhập"
+                    android:textColor="@color/black"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp"
+                    android:background="@drawable/botron"
+                    />
+                <EditText
+                    android:id="@+id/edtMatKhau"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:hint="   Mật khẩu cũ"
+                    android:textColor="@color/black"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/botron"
+                    />
+                <EditText
+                    android:id="@+id/edtmatKhauMoi"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:hint="   Mật khẩu mới"
+                    android:textColor="@color/black"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/botron"
+                    />
+                <EditText
+                    android:id="@+id/edtnhapLai"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:hint="   Nhập lại mật khẩu mới"
+                    android:textColor="@color/black"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/botron"
+                    />
+                <Button
+                    android:id="@+id/btnDoimk"
+                    android:layout_marginRight="80dp"
+                    android:layout_marginLeft="80dp"
+                    android:layout_marginTop="60dp"
+                    android:background="@drawable/botronbtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:text="Đổi mật khẩu"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
