--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/toolBar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@color/purple_200"
+                android:background="#4A128E"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 />
         </com.google.android.material.appbar.AppBarLayout>
@@ -77,7 +77,7 @@
                 android:id="@+id/lichsu"
                 android:layout_width="150dp"
                 android:layout_height="100dp"
-                android:backgroundTint="#EA663C"
+                android:backgroundTint="#E3D241"
                 app:cardCornerRadius="20dp"
                 android:layout_marginTop="40dp"
                 android:layout_marginLeft="40dp"
@@ -119,7 +119,7 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="150dp"
                 android:layout_height="100dp"
-                android:backgroundTint="#FF5722"
+                android:backgroundTint="#10FA19"
                 app:cardCornerRadius="20dp"
                 android:layout_marginTop="40dp"
                 android:layout_marginLeft="40dp"
