--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:hint="   Tên đăng nhập"
-            android:textColor="@color/teal_200"
+            android:textColor="@color/black"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
 
@@ -36,11 +36,12 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:hint="   Mật khẩu"
-            android:textColor="@color/teal_200"
+            android:textColor="@color/black"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/botron"
+            android:inputType="textPassword"
             />
         <Button
             android:id="@+id/btnLogin"
