--- a/app/src/main/res/layout/layoutheader.xml
+++ b/app/src/main/res/layout/layoutheader.xml
@@ -7,24 +7,25 @@
     android:padding="20dp"
     android:gravity="bottom"
     >
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imvavatar"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:src="@drawable/background"/>
     <TextView
-        android:id="@+id/tenuser"
+        android:id="@+id/tvtenuser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="LeThanhDat"
+        android:text="LeThanhDat06"
         android:textSize="16dp"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:layout_marginTop="8dp"/>
     <TextView
-        android:id="@+id/email"
+        android:id="@+id/tvemail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="lethanhdat@gmail.com"
+        android:text="lethanhdat06012000@gmail.com"
         android:textSize="16dp"
         android:textColor="@color/white"
       />
