--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -27,6 +27,11 @@
             android:id="@+id/doimatkhau"
             />
         <item
+            android:icon="@drawable/ic_baseline_help_center_24"
+            android:title="Quên mật khẩu"
+            android:id="@+id/quenmatkhau"
+            />
+        <item
             android:icon="@drawable/ic_sharp_keyboard_return_24"
             android:title="Đăng xuất"
             android:id="@+id/dangxuat"
