--- a/app/src/main/res/layout/activity_chi_tiet_don_hang.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_don_hang.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    tools:context=".ChiTietDonHang">
+    tools:context=".ChiTietDonHang_Activity">
     <LinearLayout
         android:background="#CD8C8C"
         android:layout_width="match_parent"
