--- a/app/src/main/res/layout/activity_dang_cho_xac_nhan.xml
+++ b/app/src/main/res/layout/activity_dang_cho_xac_nhan.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    tools:context=".DangGiaoHang">
+    tools:context=".DangGiaoHang_Activity">
     <LinearLayout
         android:background="#CD8C8C"
         android:layout_width="match_parent"
