--- a/app/src/main/res/layout/activity_quen_mat_khau.xml
+++ b/app/src/main/res/layout/activity_quen_mat_khau.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Login_Activity">
+    tools:context=".QuenMatKhau_Activity">
     <ImageView
         android:layout_width="429dp"
         android:layout_height="283dp"
@@ -20,45 +20,30 @@
         android:layout_marginTop="50dp"
         android:orientation="vertical">
         <EditText
-            android:id="@+id/tendangnhap"
+            android:drawableStart="@drawable/ic_baseline_email_24"
+            android:id="@+id/email"
+            android:drawablePadding="10dp"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:padding="10dp"
-            android:drawableStart="@drawable/ic_baseline_perm_identity_24"
-            android:hint="@string/tendangnhap"
+            android:hint=" Email"
             android:textColor="@color/black"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
-            android:drawablePadding="10dp"
             android:background="@drawable/botron"
-            />
-        <EditText
-            android:id="@+id/matkhau"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:drawableStart="@drawable/ic_baseline_lock_24"
-            android:hint="@string/matkhau"
-            android:drawablePadding="10dp"
-            android:textColor="@color/black"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/botron"
-            android:inputType="textPassword"
             />
 
         <TextView
-            android:id="@+id/txtQuenMatKhau"
+            android:id="@+id/txtLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
-            android:text="Quên mật khẩu"
+            android:text="Đăng nhập!"
             android:textColor="@color/black"
             android:textSize="17dp" />
         <Button
-            android:id="@+id/btnLogin"
+            android:id="@+id/btnGui"
             android:layout_marginRight="80dp"
             android:layout_marginLeft="80dp"
             android:layout_marginTop="40dp"
@@ -66,7 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:text="Login"
+            android:text="Gửi"
             />
     </LinearLayout>
 </LinearLayout>
