--- a/app/src/main/res/drawable/botronbtn.xml
+++ b/app/src/main/res/drawable/botronbtn.xml
@@ -5,13 +5,13 @@
 
     <!-- Set màu nền-->
     <solid
-        android:color="#FF9900">
+        android:color="#93242A">
     </solid>
 
     <!-- đặt thuộc tính màu và độ rộng của đường viền -->
     <stroke
         android:width="1dp"
-        android:color="#E3A3A3">
+        android:color="#AC3A40">
     </stroke>
 
     <!-- các thuộc tính căn chỉnh-->
