--- a/app/src/main/res/layout/activity_doi_mat_khau.xml
+++ b/app/src/main/res/layout/activity_doi_mat_khau.xml
@@ -7,8 +7,8 @@
     tools:context=".Doi_Mat_Khau_Activity"
     android:orientation="vertical"
     >
-    <LinearLayout
-        android:background="#9A3636"
+    <FrameLayout
+        android:background="#93242A"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -16,7 +16,7 @@
             android:id="@+id/imgBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_arrow_back_ios_24"
+            android:src="@drawable/ic_baseline_back"
             android:layout_marginTop="3dp"
             android:layout_marginLeft="5dp"
             />
@@ -28,7 +28,7 @@
             android:textSize="22dp"
             android:textStyle="bold"
             android:textColor="@color/white" />
-    </LinearLayout>
+    </FrameLayout>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -37,14 +37,26 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             >
-            <ImageView
-                android:layout_width="429dp"
-                android:layout_height="283dp"
-                android:src="@drawable/logo"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:layout_editor_absoluteY="16dp" />
+            <androidx.cardview.widget.CardView
+                android:layout_marginTop="-35dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="40dp">
+                <FrameLayout
+                    android:backgroundTint="#93242A"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+
+                        android:adjustViewBounds="true"
+                        android:background="@drawable/logo"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/logo"
+                        android:layout_marginTop="33dp"/>
+                </FrameLayout>
+            </androidx.cardview.widget.CardView>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
