--- a/app/src/main/res/layout/activity_quen_mat_khau.xml
+++ b/app/src/main/res/layout/activity_quen_mat_khau.xml
@@ -6,52 +6,97 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".QuenMatKhau_Activity">
-    <ImageView
-        android:layout_width="429dp"
-        android:layout_height="283dp"
-        android:src="@drawable/logo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="16dp" />
-    <LinearLayout
+    <FrameLayout
+        android:background="#93242A"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:orientation="vertical">
-        <EditText
-            android:drawableStart="@drawable/ic_baseline_email_24"
-            android:id="@+id/email"
-            android:drawablePadding="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:hint=" Email"
-            android:textColor="@color/black"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:background="@drawable/botron"
-            />
-
-        <TextView
-            android:id="@+id/txtLogin"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/imgBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:text="Đăng nhập!"
-            android:textColor="@color/black"
-            android:textSize="17dp" />
-        <Button
-            android:id="@+id/btnGui"
-            android:layout_marginRight="80dp"
-            android:layout_marginLeft="80dp"
-            android:layout_marginTop="40dp"
-            android:background="@drawable/botronbtn"
+            android:src="@drawable/ic_baseline_back"
+            android:layout_marginTop="3dp"
+            android:layout_marginLeft="5dp"
+            />
+        <TextView
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:text="Gửi"
-            />
-    </LinearLayout>
+            android:text="Quên mật khẩu"
+            android:textSize="22dp"
+            android:textStyle="bold"
+            android:textColor="@color/white" />
+    </FrameLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <androidx.cardview.widget.CardView
+                android:layout_marginTop="-35dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                app:cardCornerRadius="40dp">
+                <FrameLayout
+                    android:backgroundTint="#93242A"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+
+                        android:adjustViewBounds="true"
+                        android:background="@drawable/logo"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/logo"
+                        android:layout_marginTop="33dp"/>
+                </FrameLayout>
+            </androidx.cardview.widget.CardView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:orientation="vertical">
+                <EditText
+                    android:drawableStart="@drawable/ic_baseline_email_24"
+                    android:id="@+id/email"
+                    android:drawablePadding="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:hint=" Email"
+                    android:textColor="@color/black"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp"
+                    android:background="@drawable/botron"
+                    />
+
+                <TextView
+                    android:id="@+id/txtLogin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="20dp"
+                    android:text="Đăng nhập!"
+                    android:textColor="@color/black"
+                    android:textSize="17dp" />
+                <Button
+                    android:id="@+id/btnGui"
+                    android:layout_marginRight="80dp"
+                    android:layout_marginLeft="80dp"
+                    android:layout_marginTop="40dp"
+                    android:background="@drawable/botronbtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:text="Gửi"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
