--- a/app/src/main/res/layout/activity_thongtincanhan.xml
+++ b/app/src/main/res/layout/activity_thongtincanhan.xml
@@ -6,10 +6,33 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".Thongtincanhan_Activity">
+    <FrameLayout
+        android:background="#93242A"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/imgBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_back"
+            android:layout_marginTop="3dp"
+            android:layout_marginLeft="5dp"
+            />
+        <TextView
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Thông tin cá nhân"
+            android:textSize="22dp"
+            android:textStyle="bold"
+            android:textColor="@color/white" />
+    </FrameLayout>
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
