--- a/app/src/main/res/layout/itemlichsu.xml
+++ b/app/src/main/res/layout/itemlichsu.xml
@@ -120,6 +120,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
+                android:layout_marginRight="30dp"
                 android:text="@string/tongdon"
                 android:textColor="#000"
                 android:textSize="25dp" />
