--- a/app/src/main/res/layout/layoutheader.xml
+++ b/app/src/main/res/layout/layoutheader.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="190dp"
-    android:background="@color/purple_200"
+    android:background="#F3E761"
     android:orientation="vertical"
     android:padding="20dp"
     android:gravity="bottom"
@@ -19,7 +19,7 @@
         android:text="LeThanhDat06"
         android:textSize="16dp"
         android:textStyle="bold"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:layout_marginTop="8dp"/>
     <TextView
         android:id="@+id/tvemail"
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:text="lethanhdat06012000@gmail.com"
         android:textSize="16dp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
       />
 
 
